src/main/resources/conf8-working-kube-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymetv-app-service
  labels:
    app: paymetv-app
spec:
  type: LoadBalancer # Use NodePort if LoadBalancer is not available in your cluster
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: paymetv-app
