src/main/resources/conf8-working-kube-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paymetv-app-ingress
  labels:
    app: paymetv-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: paymetv.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paymetv-app-service
                port:
                  number: 80
